third_party/move/move-compiler-v2/tests/acquires-checker/resources_invalid.exp

Diagnostics:
warning: access of the field `addr` on type `objects::ReaderRef` can only be done within the defining module `0x42::objects`, but `objects::reader` could be called (and expanded) outside the module
  ┌─ tests/acquires-checker/resources_invalid.move:7:23
  │
7 │     public inline fun reader<T: key>(ref: &ReaderRef<T>): &T {
  │                       ^^^^^^
8 │         borrow_global<T>(ref.addr)
  │                          -------- accessed here

error: Invalid operation: access of the field `addr` on type `objects::ReaderRef` can only be done within the defining module `0x42::objects`
   ┌─ tests/acquires-checker/resources_invalid.move:17:16
   │
 8 │         borrow_global<T>(ref.addr)
   │                          -------- accessed here
   ·
17 │     public fun get_value(ref: &obj::ReaderRef<Token>): u64 {
   │                ^^^^^^^^^
18 │         obj::reader(ref).val
   │         ---------------- from a call inlined at this callsite
